--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
+# $ conda activate <env>
+# $ pip install argparse
 # platform: win-64
-argparse=1.4.0=pypi_0
 brotlipy=0.7.0=py310h2bbff1b_1002
 bzip2=1.0.8=he774522_0
 ca-certificates=2022.10.11=haa95532_0
